--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -12,7 +12,6 @@ section {
         .aboutSegment {
             width: calc(50% - 100px);
             margin-left: 50px;
-            // padding: 50px 0;
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
@@ -29,7 +28,7 @@ section {
 
 // FONT AWESOME
 .fa-stack {
-    left: -73px;
+    left: -65px;
     bottom: -70px;
     font-size: 2.4rem;
 }
@@ -54,7 +53,7 @@ section {
         flex-wrap: wrap;
         justify-content: space-between;
         .burgerSegment {
-            width: calc(50% - 70px);
+            width: 44%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -62,22 +61,22 @@ section {
         }
     .burgerLeft {
         position: relative;
-        top: -35%;
-        left: -12%;
-        box-shadow: 30px 30px 0px -7px $accents; 
+        top: -30%;
+        left: 0%;
+        box-shadow: $rightShadow;
     }
     .leftText {
         text-align: right;
-        padding: 0 70px;
+        padding-left: 25%;
     }
     .burgerRight {
         position: relative;
-        bottom: -35%;
-        right: -12%;
-        box-shadow: -30px 30px 0px -7px $accents;
+        bottom: -30%;
+        right: 0%;
+        box-shadow: $leftShadow;
     }
     .rightText {
-        padding: 0 70px;
+        padding-right: 25%;
     }
 }
     
@@ -113,7 +112,7 @@ section {
         display: flex;
         align-items: center;
         img {
-            box-shadow: -30px 30px 0px -7px $accents;
+            box-shadow: $leftShadow
         }
     }
     .natureText {
